--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.6",
     "@reduxjs/toolkit": "^2.3.0",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "ky": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
